Added a reset.css and started working on the index template

--- a/gjutjarnsexperten/blog/templates/blog/index.html
+++ b/gjutjarnsexperten/blog/templates/blog/index.html
@@ -1,3 +1,15 @@
 {% load static %}
 
+<!DOCTYPE html>
+<title>Gjutjärnsexperten</title>
+<meta charset="UTF-8" />
+
+<link rel="stylesheet" type="text/css" href="{% static 'blog/reset.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}" />
+
+<body>
+		yo
+
+
+</body>
+</html>
