Working out the website layout

--- a/gjutjarnsexperten/blog/templates/blog/index.html
+++ b/gjutjarnsexperten/blog/templates/blog/index.html
@@ -8,8 +8,18 @@
 <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}" />
 
 <body>
-		yo
+  <div id="wrapper">
+	<div id="header"></div>
+	<div id="content">
+	  content
+	</div>
+	<div id="menu">
+	  menu
+	</div>
 
-
+	<div id="footer">
+	  footer
+	</div>
+  </div>
 </body>
 </html>
