--- a/gjutjarnsexperten/blog/static/blog/style.css
+++ b/gjutjarnsexperten/blog/static/blog/style.css
@@ -1,5 +1,41 @@
+body {
+	heigth: 100%;
+	background-color: #3e4147;
+}
 
 
-li a {
-    color: green;
+#wrapper {
+	width: 940px;
+	height: auto;
+	margin: 0 auto;
+	background-color: red;
+}
+
+#header {
+	width: 100%;
+	height: 100px;
+	background-color: green;
+}
+
+#content {
+	width: 70%;
+	height: auto;
+	min-height: 800px;
+	background-color:gray;
+	float: left;
+
+}
+
+#menu {
+	width: 30%;
+	height: auto;
+	background-color:yellow;
+	float: right;
+}
+
+#footer {
+	width: 100%;
+	height: 35px;
+	background-color: green;
+	float: left;
 }
